welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:2: error: ')' expected but '<-' found.
pour(i <- 1 to 10 ) {
       ^