welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
pour(i <- 1 to 10 ) {
	

retourne() ;

while (!estSurBiscuit()) {
	 
	avance() }

if(estSurBiscuit()) {
	prendBiscuit() 
	retourne () ;
}


while(porteBiscuit() && !estSurBiscuit()) {
	
	avance() ;
	if (estSurBiscuit()) {
		retourne ;
		avance() ;
	poseBiscuit() ;	
	}

}
}